[tool.poetry]
name = "vectest-poetry"
version = "0.1.0"
description = ""
authors = ["Luke Hinds <luke@stacklok.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.8"
numpy = ">=1.24.0"
sqlite-vec = "0.1.4a2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
